// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateCostV1 > fixture: box perimeter 300x50, internal pitched roof, same geometry 1`] = `
{
  "cost_ex_gst": 14015.08,
  "cost_inc_gst": 16117.34,
  "notes_and_warnings": [],
  "warnings": [],
}
`;

exports[`calculateCostV1 > fixture: pitched, acrylic, 6m × 3m, black, soffit + deck posts, 2.4m 1`] = `
{
  "cost_ex_gst": 10843.1,
  "cost_inc_gst": 12469.56,
  "notes_and_warnings": [],
  "warnings": [],
}
`;
